Cleans up index.html, overflow-y instead of overflow in hud.css

--- a/css/hud.css
+++ b/css/hud.css
@@ -137,7 +137,7 @@ input[type=number] {
 /* ==========================================================================
    Functionality
    ========================================================================== */
-.scrollable {overflow: scroll;}
+.scrollable {overflow-y: scroll;}
 
 .spacer { /* because menu elements are floats */
 	visibility: hidden;
